--- a/frontend/web-agg-app/src/app/data-analysis/cost-of-living-page/cost-of-living-page.component.html
+++ b/frontend/web-agg-app/src/app/data-analysis/cost-of-living-page/cost-of-living-page.component.html
@@ -14,51 +14,80 @@
   </button>
 </div>
 
+<div class="actions-pane form-inline-container">
+  <form [formGroup]="form">
+    <mat-form-field class="field">
+      <mat-label>Salary type</mat-label>
+      <mat-select name="selectedSalaryType" formControlName="selectedSalaryType">
+        <mat-option *ngFor="let salaryType of salaryTypes" [value]="salaryType">{{salaryType.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field class="field">
+      <mat-label>Manual salary</mat-label>
+      <input matInput name="manualSalary" formControlName="manualSalary">
+    </mat-form-field>
+
+    <mat-form-field class="field">
+      <mat-label>Multiplicator of salary</mat-label>
+      <input matInput name="salaryMultiplicator" formControlName="salaryMultiplicator">
+    </mat-form-field>
+
+    <button mat-flat-button (click)="rebuildTable()">Rebuild</button>
+  </form>
+</div>
+
 <table>
   <tr>
     <th>City</th>
     <th>Salary</th>
-    <th>Renting</th>
+    <th>Daily expenses</th>
     <th>Totals</th>
-    <th>Aux</th>
+    <th>Big purchases</th>
   </tr>
   @for(city of cities; track $index)
   {
     <tr>
-      <td>{{city.name}} {{city.country}}</td>
+      <td>{{ $index + 1 }}. {{city.name}}, {{city.country}}</td>
       <td>
         <ul>
           <li><b>Net avg:</b> {{ city.averageExpatSalaryNet | number: '1.0-0' }}</li>
           <li><b>Gross avg:</b> {{ city.averageExpatSalaryGrossYearly | number: '1.0-0' }}</li>
-          <li><b>P25 gross:</b> {{ city.salaries.p25!/12 | number: '1.0-0' }} x 12 = {{ city.salaries.p75! | number: '1.0-0' }} </li>
-          <li><b>P75 gross:</b> {{ city.salaries.p75!/12 | number: '1.0-0' }} x 12 = {{ city.salaries.p75! | number: '1.0-0' }}</li>
-          <li><b>P75 net:</b> {{ city.p75SalaryNet | number: '1.0-0' }}</li>
+          <li><b>P25 net/gross:</b> {{ city.p25SalaryNet | number: '1.0-0' }}; {{ city.salaries.p25!/12 | number: '1.0-0' }} x 12 = {{ city.salaries.p25! | number: '1.0-0' }}</li>
+          <li><b>P75 net/gross:</b> {{ city.p75SalaryNet | number: '1.0-0' }}; {{ city.salaries.p75!/12 | number: '1.0-0' }} x 12 = {{ city.salaries.p75! | number: '1.0-0' }}</li>
+          <li><b>Chosen:</b> {{ city.chosenSalaryNetMonthly | number: '1.0-0' }}</li>
         </ul>
       </td>
       <td>
         <ul>
-          <li><b>Personal:</b> {{ city.personalWithoutChildcare  | number: '1.0-0' }}
-            <wa-diff-span [baseValue]="city.personalWithoutChildcare" [relativeValue]="city.p75SalaryNet"></wa-diff-span></li>
-          <li><b>Personal all:</b> {{ city.personalAll | number: '1.0-0' }}
-            <wa-diff-span [baseValue]="city.personalAll" [relativeValue]="city.p75SalaryNet"></wa-diff-span></li>
-          <li><b>Personal with mortgage:</b> {{ city.personalWithMortgageAndChildcare  | number: '1.0-0' }}
-            <wa-diff-span [baseValue]="city.personalWithMortgageAndChildcare" [relativeValue]="city.p75SalaryNet"></wa-diff-span></li>
+          <li *ngIf="city.hasFreeApartment"><b style="color: orange;">Free apartment applied</b></li>
+          <li><b>Expenses as pair:</b> {{ city.personalWithoutChildcare  | number: '1.0-0' }}
+            <wa-diff-span [baseValue]="city.personalWithoutChildcare" [relativeValue]="city.chosenSalaryNetMonthly"></wa-diff-span></li>
+          <li><b>Expenses with child:</b> {{ city.personalAll | number: '1.0-0' }}
+            <wa-diff-span [baseValue]="city.personalAll" [relativeValue]="city.chosenSalaryNetMonthly"></wa-diff-span></li>
+          <li><b>Expenses with mortgage:</b> {{ city.personalWithMortgageAndChildcare  | number: '1.0-0' }}
+            <wa-diff-span [baseValue]="city.personalWithMortgageAndChildcare" [relativeValue]="city.chosenSalaryNetMonthly"></wa-diff-span></li>
         </ul>
 
       </td>
       <td>
         <ul>
-          <li><b>Sustainable salary net:</b> {{ city.sustainableSalaryNet | number: '1.0-0' }}
-            <wa-diff-span [baseValue]="city.sustainableSalaryNet" [relativeValue]="city.p75SalaryNet"></wa-diff-span> / {{ city.sustainableSalaryGross | number: '1.0-0' }}</li>
-          <li><b>Millionaire term:</b> {{ city.millionaireTerm | number: '1.0-0' }}</li>
-          <li><b>Apt. first payment (20%) term:</b> {{ city.apartmentFirstPaymentTerm  | number: '1.0-0' }}</li>
+          <li><b>Sustainable net/gross:</b> {{ city.sustainableSalaryNet | number: '1.0-0' }}
+            <wa-diff-span [baseValue]="city.sustainableSalaryNet" [relativeValue]="city.chosenSalaryNetMonthly"></wa-diff-span> / {{ city.sustainableSalaryGross | number: '1.0-0' }}</li>
+          <li><b>1 mln in 30 yrs net/gross:</b> {{ city.millionaire30YSalaryNet | number: '1.0-0' }}
+              <wa-diff-span [baseValue]="city.millionaire30YSalaryNet" [relativeValue]="city.chosenSalaryNetMonthly"></wa-diff-span> / {{ city.millionaire30YSalaryGross | number: '1.0-0' }}</li>
+          <li *ngIf="city.millionaireTerm! > 0"><b>Millionaire term:</b> {{ city.millionaireTerm! / 12 | number: '1.0-0' }} yrs</li>
+          <li *ngIf="city.millionaireEasyTerm! > 0"><b>Millionaire easy term:</b> {{ city.millionaireEasyTerm! / 12 | number: '1.0-0' }} yrs</li>
+          <li *ngIf="city.buyCarTerm! > 0"><b>Car buy term:</b> {{ city.buyCarTerm! / 12 | number: '1.0-0' }} yrs</li>
+          <li *ngIf="city.apartmentFirstPaymentTerm! > 0"><b>Apt. first payment (20%) term:</b> {{ city.apartmentFirstPaymentTerm!/12  | number: '1.0-0' }} yrs</li>
         </ul>
       </td>
       <td>
         <ul>
           <li><b>Apt. first payment:</b> {{ city.apartmentFirstPayment  | number: '1.0-0' }}</li>
-          <li><b>Apt. monthly payment:</b> {{ city.mortgageMonthlyPayment| number: '1.0-0' }}</li>
+          <li><b>Apt. monthly payment:</b> {{ city.mortgageMonthlyPayment | number: '1.0-0' }}</li>
           <li><b>Apt. price:</b> {{ city.averageApartmentsPrice  | number: '1.0-0' }}</li>
+          <li><b>Car price:</b> {{ city.averageOrdinalCarPrice  | number: '1.0-0' }}</li>
           <li><b>Rent price:</b> {{ city.averageRentPrice  | number: '1.0-0' }}</li>
         </ul>
       </td>
