--- a/frontend/web-agg-app/src/app/data-analysis/cost-of-living-page/cost-of-living-page.component.scss
+++ b/frontend/web-agg-app/src/app/data-analysis/cost-of-living-page/cost-of-living-page.component.scss
@@ -1,3 +1,19 @@
+.form-inline-container
+{
+  form
+  {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: baseline;
+
+    .field
+    {
+      width: 290px;
+    }
+  }
+}
+
 table
 {
   width: 100%;
