--- a/frontend/web-agg-app/src/app/shared/diff-span/diff-span.component.html
+++ b/frontend/web-agg-app/src/app/shared/diff-span/diff-span.component.html
@@ -1,1 +1,4 @@
-<span [class]="differenceClass()">({{ text() }})</span>
+<span [class]="differenceClass()">
+  (<span [class]="{ 'selected': baseSelected }">{{ value() }}</span>,
+  <span [class]="{ 'selected': relativeSelected }">{{ valuePercentage() }}%</span>)
+</span>
