--- a/frontend/web-agg-app/src/app/data-analysis/cost-of-living-page/cost-of-living-page.component.scss
+++ b/frontend/web-agg-app/src/app/data-analysis/cost-of-living-page/cost-of-living-page.component.scss
@@ -5,11 +5,32 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
-    align-items: baseline;
+    align-items: stretch;
+
+    .field-long
+    {
+      width: 450px;
+    }
 
     .field
     {
       width: 290px;
+    }
+
+    .field-short
+    {
+      width: 150px;
+    }
+
+    .field-shorter
+    {
+      width: 115px;
+    }
+
+    .splitter
+    {
+      margin-bottom: 18px;
+      border-left: 2px solid #888;
     }
   }
 }
