--- a/frontend/web-agg-app/src/app/shared/profit-desirable/profit-desirable.component.html
+++ b/frontend/web-agg-app/src/app/shared/profit-desirable/profit-desirable.component.html
@@ -1,10 +1,13 @@
 @if (profit)
 {
-  <wa-money-span [value]="profit.valueGross.value" /> {{currencyCode ?? '???'}}
-  @if (currencyCode != "USD" && false)
+
+  @if(isShowInUsd())
   {
-    <span>/&nbsp;</span>
-    <wa-money-span [value]="profit.valueGross.valueInUsd" /> USD
+    $<wa-money-span [value]="profit.valueGross.valueInUsd" />
+  }
+  @else
+  {
+    <wa-money-span [value]="profit.valueGross.value" [selected]="grossSelected" /> {{currencyCode ?? '???'}}
   }
   <mat-icon class="details-icon" aria-hidden="false" aria-label="Info icon" fontIcon="more_horiz"
       #tooltip="matTooltip"
@@ -13,9 +16,8 @@
       matTooltipHideDelay="100000"
       matTooltipClass="allow-cr" />
 
-
-
-  <wa-diff-span [baseValue]="profit.valueGross.value" [relativeValue]="profit.baseValueGross" />
+  <wa-diff-span [baseValue]="profit.valueGross.value" [relativeValue]="profit.baseValueGross"
+    [baseSelected]="diffSelected" [relativeSelected]="relativeSelected" />
   <mat-icon class="details-icon" aria-hidden="false" aria-label="Info icon" fontIcon="more_horiz"
     #tooltip="matTooltip"
     [matTooltip]="getDiffTooltipText()"
