code styling refactoring

--- a/frontend/web-agg-app/src/app/shared/cost-fact/cost-fact.component.html
+++ b/frontend/web-agg-app/src/app/shared/cost-fact/cost-fact.component.html
@@ -15,8 +15,16 @@
       matTooltipHideDelay="100000"
       matTooltipClass="allow-cr" />
 
-  <wa-diff-span [baseValue]="cost.valueNet.value" [relativeValue]="cost.baseProfit.valueNet.value / 12"
-    [baseSelected]="diffSelected" [relativeSelected]="relativeSelected" />
+  @if (isShowInUsd())
+  {
+    <wa-diff-span [baseValue]="cost.valueNet.valueInUsd" [relativeValue]="cost.baseProfit.valueNet.valueInUsd / 12"
+      [baseSelected]="diffSelected" [relativeSelected]="relativeSelected" />
+  }
+  @else
+  {
+    <wa-diff-span [baseValue]="cost.valueNet.value" [relativeValue]="cost.baseProfit.valueNet.value / 12"
+      [baseSelected]="diffSelected" [relativeSelected]="relativeSelected" />
+  }
   <mat-icon class="details-icon" aria-hidden="false" aria-label="Info icon" fontIcon="more_horiz"
     #tooltip="matTooltip"
     [matTooltip]="getDiffTooltipText()"
